--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "productivity-tools-extensions",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Productivity Tools extensions",
   "main": "index.js",
   "license": "UNLICENSED",
   "private": true,
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.3.0"
+  },
   "scripts": {
     "lint": "npx eslint --ext .jsx,.js src",
     "google-build-dev": "webpack --config google-webpack.config.js --progress --mode development --env verbose",
@@ -67,5 +71,11 @@
     "url-loader": "4.1.1",
     "webpack": "5.4.0",
     "webpack-cli": "4.2.0"
+  },
+  "overrides": {
+    "json5": "2.2.3",
+    "jsonwebtoken": "9.0.0",
+    "moment": "2.29.4",
+    "nanoid": "3.3.4"
   }
 }
